--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": ">=8.0",
         "psr/simple-cache": "^1.0",
         "rollerworks/search": "^2.0@dev,>=2.0.0-BETA1",
-        "ruflin/elastica": "^5.0 || ^6.0"
+        "ruflin/elastica": "^5.0 || ^6.0 || ^7.0"
     },
     "require-dev": {
         "moneyphp/money": "^3.0",
